syntax = "proto3";

option java_multiple_files = true;
option java_package = "bftsmart.rlrpc";

package rlrpc;

service RLRPC {
    rpc SetTimer(SetTimerRequest) returns (SetTimerResponse);
}

message SetTimerRequest {
    int64 timer = 1;
}

message SetTimerResponse {
    int64 timer = 1;
}
